architecture enhancement, cleaner code